# recipe-recommender-be

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
models/: README.md
src/: container.py
src/auth/v1/config/: config.example.yml
src/auth/v1/internal/adapter/handler/: auth_handler.py
src/auth/v1/internal/adapter/repo/: auth_repo.py
src/auth/v1/internal/biz/service/: auth_service.py
src/recipe/v1/config/: config.example.yml
src/recipe/v1/internal/adapter/handler/: recipe_handler.py
src/recipe/v1/internal/adapter/repo/: recipe_repo.py
src/recipe/v1/internal/biz/model/: __init__.py  recipe_model.py  user_model.py
src/recipe/v1/internal/biz/service/: recipe_service.py
src/user/v1/config/: config.example.yml
src/user/v1/internal/adapter/handler/: user_handler.py
src/user/v1/internal/adapter/repo/: user_repo.py
src/user/v1/internal/biz/model/: recipe_model.py  user_model.py
src/user/v1/internal/biz/service/: user_service.py
