[project]
name = "recipe-recommender-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.49.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "gdown>=6.1.0",
    "gensim>=4.4.0",
    "google-auth-oauthlib>=1.4.0",
    "gunicorn>=23.0.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymongo>=4.17.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
]
